fix speed dial visibility

--- a/app/components/SpeedDial.css
+++ b/app/components/SpeedDial.css
@@ -1,7 +1,6 @@
 .cover {
   position: fixed;
   width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
   z-index: 1100; /* just above title bar */
@@ -16,8 +15,16 @@
 }
 
 .closed .cover {
-  visibility: hidden;
   opacity: 0;
+  transition: opacity 0.2s ease-in-out, height 0s linear 0.2s;
+}
+
+.actions {
+  position: absolute;
+}
+
+.closed .actions {
+  transition: top 0s linear 0.2s;
 }
 
 .container {
@@ -26,7 +33,7 @@
   right: 20px;
   width: 56px;
   text-align: center;
-  z-index: 1200;
+  z-index: 1110;
 }
 
 .button {
@@ -58,7 +65,6 @@
 
 .closed .tooltip {
   opacity: 0;
-  visibility: hidden;
 }
 
 .opened .main svg {
